* More conformant help and version information: printVDIFheader
* vdifmux(): change logic to determine first frame number if not explicitly provided -> simplified and probably faster and possibly more correct code.
* vdifmux(): make more robust in some parameter corner cases
* vdifmux(): nSort is now entirely referring to input frames; previously there was some use regarding output frames

Version 1.2
~~~~~~~~~~~
* Post DiFX-2.5
* Some improvements in multiplexing very sparse data
* Options in vmux to change gap/sort tuning parameters
* Added ability to summarize a mark6 module in a specific slot
* new corner turners:
  - 1-bit with 32, 64 threads
  - 2-bit with 32, 64 threads
  - 4-bit with 32, 64 threads
  - 8-bit with 32, 64 threads
  - 16-bit with 32, 64 threads
  - 32-bit with 32, 64 threads
  - 64-bit with 32, 64 threads
  - 128-bit with 32, 64 threads
* Mark6Gatherer gets module serial number for mark6 activity message

Version 1.1
~~~~~~~~~~~
* Post DiFX-2.4
* Added incrementVDIFHeader
* Added ctypes-based Python bindings and one example (vdifio_1.py)
* vsum: error message -> stderr, not stdout
* Support new EDV2 that is produced by ALMA and R2DBE.  Work here is based on spec with TBDs: http://vlbi.org/vdif/docs/alma-vdif-edv.pdf
* New functionality in printVDIFheader:
  - Add Mark6 awareness:  If the Mark6 signature is found at the beginning, 28 bytes will be skipped to allow proper decoding.
  - If framesize is not provided at the command line, take from first frame
* New functionality in vmux
  - Support multiplexing multi-channel multi-thread data (each thread must have same general parameters)
* testmk6: test/example program for mark6 reading capabilities.  Does simple gather operation and file summary at this point.
* changes to multiplexing: increase max number of threads to mux to 64, warn if too many threads are being muxed, move out cornerturners to their own file.